--- a/diary.html
+++ b/diary.html
@@ -12,7 +12,7 @@
         <nav>
             <div class="logo"><img src="logo.png" width="200" height="100" alt="Logo"></div>
             <ul>
-                <li><a href="front_end_dev.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="overview.html">Learn</a></li>
                 <li><a href="tools.html">Tools</a></li>
                 <li><a href="diary.html" class="active">Diary</a></li>
