--- a/concept1.html
+++ b/concept1.html
@@ -17,7 +17,7 @@
             <nav>
                 <div class="logo"><img src="logo.png" width = "200" height = "100"></div>
                 <ul>
-                    <li><a href="front_end_dev.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="overview.html">Learn</a></li>
                     <li><a href="tools.html">Tools</a></li>
                     <li><a href="diary.html">Diary</a></li>
